# codex-ctl

./: CLAUDE.example.md  Cargo.toml  HOWTO.md  README.md  justfile
examples/: dummy_codex.py  dummy_simple.py  opencode_debug.py  test_pty_capture.rs
src/: client.rs  main.rs  protocol.rs
src/daemon/: handler.rs  mod.rs  server.rs
src/gui/: attach.rs  mod.rs
src/log/: formatter.rs  mod.rs  reader.rs
src/parser/: blocks.rs  classifier.rs  mod.rs  prompt.rs
src/session/: input.rs  mod.rs  opencode.rs  pty.rs  screen.rs  stabilizer.rs  state.rs  wait.rs
