[package]
name = "codex-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
which = "7"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
